fixed some bugs, now works to load some defaults

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
+# Ignore everything
 *
+# Don't ignore subdirectories
+!*/
 !*.py
 !*.C
 !*.h
-__init__.py
+!*__init__.py
 !cms-macros
 !README.md
 !LICENSE
